<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:orientation="vertical">

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:text="@string/crime_title_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/crime_title"
        android:hint="@string/crime_title_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="" />
    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:text="@string/crime_details_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/crime_date"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <CheckBox
            android:id="@+id/crime_solved"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/crime_solved_label"
            app:layout_constraintBottom_toBottomOf="parent" />

        <Button
            android:id="@+id/crime_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/crime_delete"
            app:layout_constraintEnd_toEndOf="parent" />
    </android.support.constraint.ConstraintLayout>
    <Button
        android:id="@+id/crime_suspect"
        android:text="@string/crime_suspect_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/crime_report"
        android:text="@string/crime_report_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>